--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <p>
         Resultado: <span id="resultado"></span>
     </p>
-    
-
     <script type="text/javascript">
         function BotaoSomaOnClick() {
             var valor1 = document.getElementById("primeiroValor").value;
@@ -41,6 +39,8 @@
             var valor2 = document.getElementById("segundoValor").value;
             document.getElementById('resultado').innerHTML = parseInt(valor1) * parseInt(valor2);
         }
+
+        //Fazer operação de divisão. Sinal de divisão é / .
     </script>
 
 </body>
